[gd_scene load_steps=9 format=3 uid="uid://75dmqu0nkfa4"]

[ext_resource type="Script" path="res://main.gd" id="1_4lnlv"]
[ext_resource type="PackedScene" uid="uid://c6o2mpqmra1io" path="res://mob.tscn" id="2_cxehb"]
[ext_resource type="PackedScene" uid="uid://dia3n6df8bj4n" path="res://player.tscn" id="3_cf7ta"]
[ext_resource type="PackedScene" uid="uid://0p6m86cq8vya" path="res://hud.tscn" id="4_mrcpv"]
[ext_resource type="AudioStream" uid="uid://cnd336b5y6dhf" path="res://Music.mp3" id="5_c500y"]
[ext_resource type="AudioStream" uid="uid://2vm8gmn1o6y0" path="res://Death.mp3" id="6_yr3aq"]
[ext_resource type="Texture2D" uid="uid://dfd2fei83js3u" path="res://Hexagon-Pattern.png" id="7_qvei2"]

[sub_resource type="Curve2D" id="Curve2D_3jpc1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_4lnlv")
mob_scene = ExtResource("2_cxehb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.53053, 0.00368142, 0.955435, 1)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_qvei2")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_3jpc1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Player" parent="." instance=ExtResource("3_cf7ta")]

[node name="HUD" parent="." instance=ExtResource("4_mrcpv")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_c500y")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_yr3aq")

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 75.0
offset_right = 200.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "New name: "
max_length = 24
expand_to_text_length = true

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
